# toupper

./: Cargo.toml  README.md
src/: args.rs  main.rs
src/draw/: brush.rs  color.rs  drawing.rs  insert_image.rs  instruction.rs  layer.rs  mod.rs  motion.rs  point.rs  selection.rs  stroke.rs
src/routes/: mod.rs  pages.rs  ws.rs
src/ws/: handler.rs  messages.rs  mod.rs
static/: index.html  script.js
