[package]
name = "toupper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4.0.0-rc.3"
actix-web-actors = "4.0.0-beta.12"
actix-files = "0.6.0-beta.16"
clap = { version = "3.1.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9.0"
log = "0.4.0"
chrono = "0.4"
